<resources>
    <string name="game_name">Dots</string>
    <string name="game_play">Play</string>
    <string name="game_settings">Settings</string>
    <string name="settings_vibration">Vibrations</string>
    <string name="settings_gridSize">Grid Size</string>
    <string name="game_sounds">Sound</string>
    <string name="init_score">Score: 0</string>
    <string name="init_moves">Moves: 30</string>
    <string name="clear_highscore">Clear Highscore</string>

</resources>
