<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
    android:title="In Game Settings">
    <CheckBoxPreference
        android:title="@string/settings_vibration"
        android:defaultValue="false"
        android:summary="Vibrate on interaction"
        android:key="vibrations" />
    <CheckBoxPreference
        android:title="@string/game_sounds"
        android:defaultValue="false"
        android:summary="Play Sound on interaction"
        android:key="sounds" />
    <ListPreference
        android:title="@string/settings_gridSize"
        android:summary="Size of the grid: %s"
        android:key="gridSize"
        android:defaultValue="6"
        android:entries="@array/gridArray"
        android:entryValues="@array/gridValues" />
    </PreferenceCategory>
    <game.dots.ResetDialog
        android:key="@string/clear_highscore"
        android:title="Clear The Highscore List"
        android:positiveButtonText="OK"
        android:negativeButtonText="Cancel"
        />

</PreferenceScreen>